# thumbnails

./: .firebaserc  .gitignore  asset-manifest.json  index.html  package.json  pyproject.toml
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: main.yml
kkthumbs/: main.py
public/: index.html
src/: App.css  App.js  index.js
src/components/Thumbnail/: Design.jsx  Thumbnail.component.jsx  Thumbnail.styled.jsx  index.jsx
static/css/: main.ad7c4b5e.chunk.css  main.ad7c4b5e.chunk.css.map  main.b84794b1.chunk.css  main.b84794b1.chunk.css.map  main.ef9223a0.chunk.css  main.ef9223a0.chunk.css.map
static/js/: 2.4f7282ad.chunk.js  2.4f7282ad.chunk.js.map  2.df45e2a5.chunk.js  2.df45e2a5.chunk.js.map  2.e90080a9.chunk.js  2.e90080a9.chunk.js.map  2.fa9911be.chunk.js  2.fa9911be.chunk.js.map  main.2e846e71.chunk.js  main.2e846e71.chunk.js.map  main.8ec7087d.chunk.js  main.8ec7087d.chunk.js.map  main.b8c36fa6.chunk.js  main.b8c36fa6.chunk.js.map  main.cc7c54c3.chunk.js  main.cc7c54c3.chunk.js.map  main.e6279111.chunk.js  main.e6279111.chunk.js.map  runtime-main.4477c807.js  runtime-main.4477c807.js.map  runtime-main.74a88c08.js  runtime-main.74a88c08.js.map
